--- a/CMR_Template/CMR_Template/nbproject/Makefile-genesis.properties
+++ b/CMR_Template/CMR_Template/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Fri Jan 15 17:28:01 EST 2016
-default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=a29d9df60dd9a7849837c8f5ca17a004
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v1.40\\bin
-configurations-xml=d19e31fd137a58dbc1aba4a686add692
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=47805b5596804b87cda41e61096929be
+#Sat Jan 30 10:37:18 MST 2016
+default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=dcb36c7e6928d5535e26dd359786192b
+default.languagetoolchain.dir=/opt/microchip/xc32/v1.40/bin
+configurations-xml=0b5065fb182fb0abd4a3dfc4eae4b46e
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=17a71d03e7d3823160f3e8681fc226e8
 default.languagetoolchain.version=1.40
-host.platform=windows
+host.platform=linux
 conf.ids=default
